--- a/src/app.css
+++ b/src/app.css
@@ -6,5 +6,9 @@
 
 :root {
 	font-family: 'Audiowide', sans-serif;
-	@apply bg-gradient-to-tr from-orange-200 to-orange-500;
+	/* @apply bg-gradient-to-tr from-orange-200 to-orange-500; */
+	/* background-image: linear-gradient(71deg, #0f3563, #154e88, #1a68af, #1f84d7); */
+	/* background-image: linear-gradient(25deg, #22464c, #326069, #437b87, #5498a6); */
+	/* background-image: linear-gradient(173deg, #024379, #0664a2, #0988ce, #0aadfb); */
+	background-image: linear-gradient(25deg, #691c08, #933427, #bf4d45, #ec6866);
 }
